--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
     margin: 10px;
 }
 
-#addMonster:hover {
+.btn:hover {
     border: none;
-    background:#337277;
+    background: #337277;
     box-shadow: 0px 0px 1px #777;
 }
